!46 升级到3.4.1: 改进IHandle，增加ClassConfig，优化代码结构，增加新的UI框架等